<resources>
	<string name="app_name">Vanguard</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">Settings</string>

	<string name="scout_title">Scout</string>
	<string name="data_title">Graph</string>
	<string name="schedule_title">Schedule</string>
	<string name="settings_title">Settings</string>
	<string name="graph_settings_title">Graph Settings</string>
	<string name="sync_title">Sync</string>
	<string name="preferences">Shared_Preferences</string>
	<string name="question_count">question_count</string>
	<string name="doc_id">doc_id</string>
	<string name="title_activity_test">TestActivity</string>
	<string name="title_activity_test_nav">TestNavActivity</string>

	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="title_activity_match_form">MatchFormActivity</string>
	<string name="title_activity_pit_form">PitFormActivity</string>
	<string name="title_activity_settings">SettingsActivity</string>


	<string name="add_graph_error">Add Graphs in the Settings Page</string>
	<string name="set_event_error">Add and Set the Current Event in the Setting Page</string>
	<string name="add_graph_page_error">Add graphs in the top right</string>
	<string name="compatible_questions_error">Not Enough Compatible Questions</string>

	<string name="graph_page_title">Graphing</string>
	<string name="match_scouting_page_title">Match Scouting</string>
	<string name="pit_scouting_page_title">Pit Scouting</string>
	<string name="add_graph_page_title">Add Graph</string>
	<string name="scout_setting_page_title">Scout Settings</string>
	<string name="setting_page_title">Settings</string>
	<string name="add_question_page_title">Add Question</string>
	<string name="edit_question_page_title">Edit Question</string>
	<string name="graph_settings_page_title">Graph Settings</string>
	<string name="bluetooth_data_transfer_page_title">Sync</string>

	<string name="toast_event_set">Event Set</string>
	<string name="toast_no_internet">Connect to the Internet</string>
	<string name="toast_offline_events">No Internet. Displaying Previously Added Events.</string>


	<string name="confirm_delete_responses_dialog_text">Are you sure you would like to delete the responses. This cannot be undone. </string>
	<string name="confirm_delete_responses_dialog_title">Delete Responses</string>
	<string name="confirm_delete_data_point_title">Delete Data</string>
	<string name="confirm_delete_data_point_text">Are you sure you would like to delete this response. This cannot be undone.</string>
	<string name="confirm_delete_question_title">Delete Question</string>
	<string name="confirm_delete_question_text">Are you sure you would like to delete this question. All of its responses will be lost. This cannot be undone. </string>
	<string name="confirm_not_server_add_question_title">Warning</string>
	<string name="confirm_not_server_add_question_text">Are you sure you would like to add a question. When this device is synced with the server this question will be lost. </string>

</resources>
