<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scout"
            android:icon="@drawable/ic_menu_scout"
            android:title="@string/scout_title"/>
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/schedule_title"/>
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_menu_data"
            android:title="@string/data_title"/>
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_menu_sync"
            android:title="@string/sync_title"/>
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings_title"/>
    </group>
</menu>
